12 - Start-Hosting-Page HTML: Checkbox and following label enclosed in a div.  Shared CSS: Applied grid to the whole website. Grid area names used. Height of 100% added to body and html selectors to fix footer not aligned to bottom when inadequate height of content at large size screens. Main footer margin removed from this page.  Main-Page CSS: Product Overview margin changed in mobile and removed for bigger screen sizes. Main footer margin specific to this page added.  Plans-Page CSS: Changed margin bottom to match margin top for the main content. Padding top of main content removed.  Customers-Page CSS: Main content margin altered to make page symmetrically pleasing.  Start-Hosting-Page CSS: Checkbox background colour and border altered in hover and checked pseudo states to match the rest of the form elements. Main element margin bottom added to increase asthetics of page in mobile view. Margin top and vertical alignment of form elements removed. Functionality replicated through grid. Grid auto row height added for uniform row height of auto generated rows. New enclosing container (checkbox and following label created) class used for better placement at grid for wide screens via css control.

--- a/css/customers.css
+++ b/css/customers.css
@@ -1,6 +1,6 @@
 /* ********************************* TESTIMONIALS */
 main>div{
-  margin: 6rem 0 3rem;
+  margin: 3rem 0;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -75,7 +75,6 @@ main>div{
 /* MEDIA QUERY */
 @media (min-width: 40rem){
   .testimonial{
-    /* margin: 10rem auto; */
     max-width: 1500px;
     flex-direction: row;
     align-items: center;    
