--- a/css/shared.css
+++ b/css/shared.css
@@ -7,6 +7,10 @@
     font-family: 'Montserrat', sans-serif; */
     
 /* ********************************** UNIVERSAL RULES */
+html{
+  height: 100%;
+}
+
 * {
     box-sizing: border-box;
   }
@@ -15,6 +19,12 @@
 body {
   font-family: "Montserrat", sans-serif;
   margin: 0;
+  height: 100%;
+  display: grid;
+  grid-template-rows: 3.5rem auto fit-content(8rem);
+  grid-template-areas: "header"
+                       "main"
+                       "footer";
 }
 
 /* ********************************** BACKDROP */
@@ -92,6 +102,7 @@ body {
   padding: 0 1rem;
   z-index: 5;
   top: 0;
+  grid-area: header;
 }
 
 /* MOBILE NAVIGATION */
@@ -238,9 +249,10 @@ body {
 
 /* ***************************************** MAIN SECTION */
 main{
-  min-height: calc(100vh - 3rem - 8.1875rem);
-  margin-top: 3rem;
+  /* min-height: calc(100vh - 3rem - 8.1875rem); */
+  grid-area: main;
 }
+
 /* PLAN BUTTONS */
 .button{
   background-color: #0e4f1f;
@@ -266,7 +278,9 @@ main{
 /* ***************************************** FOOTER SECTION */
 .main-footer{
   background-color: #000;
-  padding: 2rem;
+  /* padding: 2rem; */
+  padding: 1.5rem;
+  grid-area: footer;
 }
 
 
@@ -275,7 +289,6 @@ main{
   list-style: none;
   margin: 0;
   padding: 0;
-  /* text-align: center; */
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -302,10 +315,6 @@ main{
 
 /* MEDIA QUERY */
 @media (min-width: 40rem){
-  .main-footer{
-    margin-top: 3rem;
-  }
-
   .main-footer__links{
     flex-direction: row;
     justify-content: center;
@@ -320,6 +329,7 @@ main{
     margin: 0 1rem;
   }
 }
+
 /* FOR JAVASCRIPT USAGE*/
 .open{
   display: block !important;
